About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181024a:
    * Changed land colors to make land look better
    * Changed how selected storm outlines are drawn to make them look better
    * Split the code into multiple files to begin some cleanup and refactoring
    * Some attempt at fixing subtropical cyclones so they're less nonexistant
    * Slightly lowered spawn rate
    * Land generation is now seeded with the time, which is stored in a "seed" variable
v20181015a:
    + Added a makeshift "track forecast" to selected storms; yellow dots show where the storm might go (is often wrong!)
v20181014a:
    * Fujiwhara tweaked to make stronger storms and extratropical systems more "dominant" in the interaction
    * Simulation speed now works in powers of 2, with a 6th speed option added
        > Full-Speed, Half-Speed, 1/4 Speed, 1/8 Speed, 1/16 Speed, and 1/32 Speed
    * When a storm is selected, only the selected storm's track shows
v20181013a:
    + Readded subtropical storms, using different mechanics
    + Added fujiwhara interaction (Might need tweaking)
    * Changed C4 and C5 colors
    * Analysis now shows all systems, tropical and not, throughout a season
    * Only TCs now show tracks, including precursors and remnants
v20181004a:
    * Made steering completely drunk for the moment (will be fixed)
    * Changed canvas dimensions to 960x540 as to fit a 16:9 aspect ratio
    - Temporarily removed subtropical storms
        > System behavior hasn't yet changed, but they're just classified as extratropical, thus expect E5s
v20180810a:
    + Added clickable UI elements/buttons, opening the door for more possibilities in this sim along with better mobile compatibility
    + Added a pause button, which works alongside the existing "space"
        > The indicator text also functions as an extension of the pause button when a storm isn't selected